<resources>
    <string name="app_name">MYCARD</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="carlos_david">Carlos David</string>
    <string name="s_20_00">S/.20.00</string>
    <string name="todo">TODO</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="a">a</string>
    <string name="stream_ease">Stream Ease</string>
    <string name="nuestra_aplicaci_n_de_seguimiento_de_suscripciones_de_plataformas_de_streaming_tu_compa_ero_digital_para_gestionar_tus_servicios_de_entretenimiento_favoritos">Nuestra aplicación de seguimiento de suscripciones de plataformas de streaming, tu compañero digital para gestionar tus servicios de entretenimiento favoritos.</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="empezar">EMPEZAr</string>
    <string name="inicia_sesion">Inicia Sesion</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="hola_inicia_sesion">HOLA, Inicia Sesion!</string>
    <string name="ingrese_su_correo">Ingrese su Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="srcd">TODO</string>
    <string name="xsx">TODO</string>
    <string name="correo_electronico" />
    <string name="contraseña">contraseña</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="icon_add">Icon_Add</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="Suscripciones">Suscripciones</string>
    <string name="nombre">Nombre:</string>
    <string name="ingrese_el_nombre">Ingrese el nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="ingrese_la_descripcion">Ingrese la descripcion</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento:</string>
    <string name="ingrese_la_fecha_de_vencimiento">Ingrese la fecha de vencimiento</string>
    <string name="metodo_de_pago">Metodo de pago:</string>
    <string name="ingrese_el_metodo_de_pago">Ingrese el metodo de pago</string>
    <string name="q">q</string>
    <string name="ocupacion">Ocupacion</string>
    <string name="home">iconHome</string>
    <string name="proximos">proximos</string>
    <string name="seguimiento">seguimiento</string>
    <string name="mas">mas</string>
    <string name="icon_description">notifiaciones</string>
    <string name="Guardar">guardar</string>
    <string name="tema_del_dispositivo">Tema del dispositivo</string>
    <string name="recarga">Recarga</string>
    <string name="idioma">Idioma</string>
</resources>