<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".pantalla6">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Ingrese el monto"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView4"
        app:layout_constraintVertical_bias="0.721">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_el_nombre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDescripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ingrese_la_descripcion" />
            <ImageView
                android:id="@+id/colorPickerIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="Seleccionar color"
                android:src="@drawable/palete"
                android:clickable="true"
                android:focusable="true"
                app:tint="@color/black"/>

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_vencimiento" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/ingrese_la_fecha_de_vencimiento"
                android:focusable="true"
                android:clickable="true"
             />

            <ImageView
                android:id="@+id/calendarIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/icon_add"
                android:src="@drawable/calendar"
                android:visibility="visible"
                android:clickable="true"
                android:focusable="true"
                app:tint="@color/black" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metodo_de_pago" />

        <EditText
            android:id="@+id/editTextMetodoPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_el_metodo_de_pago" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botonguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Guardar"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:contentPadding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/AppBar"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/principal"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/home"
                android:src="@drawable/_home"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />

            <ImageView
                android:id="@+id/prox"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/proximos"
                android:src="@drawable/arrow"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />

            <ImageView
                android:id="@+id/segui"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/seguimiento"
                android:src="@drawable/full"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />

            <ImageView
                android:id="@+id/confi"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/mas"
                android:src="@drawable/suspensivos"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@drawable/add_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintMargin="16dp"/>
    -->
</androidx.constraintlayout.widget.ConstraintLayout>
