<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantalla5">





    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:contentPadding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/AppBar"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/home"
                android:src="@drawable/_home"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/proximos"
                android:src="@drawable/arrow"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/seguimiento"
                android:src="@drawable/full"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/mas"
                android:src="@drawable/suspensivos"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="1dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="27dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="50dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/perfil_foreground" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/nombre_del_usuario"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/ocupacion"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/icon_description"
                android:src="@drawable/notificaciones" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Suscripciones"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/textView8">
        <LinearLayout
            android:id="@+id/informacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        </LinearLayout>

    </ScrollView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="691dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/botones"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/icon_add"
                android:src="@drawable/add_svgrepo_com"
                app:tint="@color/cardview_light_background" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>