<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantalla8">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Configuracion"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre del usuario" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/cerrar_sesion"
            android:fontFamily="@font/roboto_bold"
            android:text="Cerrar Sesion" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/money"
                    android:tint="@color/black"
                    />
            </androidx.cardview.widget.CardView>



            <TextView
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:text="Moneda Predeterminada"
                android:textSize="16sp"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/expand"
                android:background="@drawable/shadow_background"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/languanje"
                    />
            </androidx.cardview.widget.CardView>



            <TextView
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:text="Moneda Predeterminada"
                android:textSize="16sp"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/expand"
                android:background="@drawable/shadow_background"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/restart"
                    />
            </androidx.cardview.widget.CardView>



            <TextView
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:text="Moneda Predeterminada"
                android:textSize="16sp"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/expand"
                android:background="@drawable/shadow_background"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/dark"
                    />
            </androidx.cardview.widget.CardView>



            <TextView
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:text="Moneda Predeterminada"
                android:textSize="16sp"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/expand"
                android:background="@drawable/shadow_background"/>
        </LinearLayout>



    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:contentPadding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/AppBar"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/principal"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/home"
                android:src="@drawable/_home"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />

            <ImageView
                android:id="@+id/prox"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/proximos"
                android:src="@drawable/arrow"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />

            <ImageView
                android:id="@+id/segui"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/seguimiento"
                android:src="@drawable/full"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />

            <ImageView
                android:id="@+id/confi"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:contentDescription="@string/mas"
                android:src="@drawable/suspensivos"
                app:tint="@color/AppBar"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="791dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>